--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ annotated-types==0.7.0
 anyio==4.4.0
 certifi==2024.6.2
 click==8.1.7
+deprecation==2.1.0
 dnspython==2.6.1
 email_validator==2.2.0
 exceptiongroup==1.2.1
 fastapi==0.111.0
 fastapi-cli==0.0.4
+gotrue==2.5.4
 greenlet==3.0.3
 gunicorn==22.0.0
 h11==0.14.0
@@ -15,6 +17,7 @@ httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
+itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
 markdown-it-py==3.0.0
@@ -22,19 +25,27 @@ MarkupSafe==2.1.5
 mdurl==0.1.2
 orjson==3.10.5
 packaging==24.1
+postgrest==0.16.8
 psycopg2-binary==2.9.9
 pydantic==2.8.0
 pydantic-settings==2.3.4
 pydantic_core==2.20.0
 Pygments==2.18.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+realtime==1.0.6
 rich==13.7.1
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.31
 starlette==0.37.2
+storage3==0.7.6
+StrEnum==0.4.15
+supabase==2.5.1
+supafunc==0.4.6
 typer==0.12.3
 typing_extensions==4.12.2
 ujson==5.10.0
