--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres.yrkuagnczjpdvfaxdcbt:mNtKlR129JgbT234eD@aws-0-ap-south-1.pooler.supabase.com:6543/postgres
+; sqlalchemy.url = 
 
 
 [post_write_hooks]
