Github actions autodeploy added

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,7 @@ jobs:
         host: ${{ secrets.DROPLET_IP }}
         username: ${{ secrets.DROPLET_USER }}
         key: ${{ secrets.DROPLET_SSH_KEY }}
+        passphrase: ${{ secrets.DROPLET_SSH_PASSPHRASE }}
         script: |
           cd /root/penguin-backend
           git pull origin main
